--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,9 +1,9 @@
 {
  "name": "Ikoyo Daniel",
  "short_name": "Ikoyo Daniel",
- "display": "standalone",
+ "display": "minimal-ui",
  "background_color": "#0f2247" ,
- "theme_color": "#4da8da",
+ "theme_color": "#006ede",
  "orientation": "any",
  "start_url": "/",
  "icons": [
@@ -42,6 +42,12 @@
    "sizes": "192x192",
    "type": "image\/png",
    "density": "4.0"
+  },
+  {
+   "src": "\/logo512.png",
+   "sizes": "512x512",
+   "type": "image\/png",
+   "density": "7.0"
   }
  ]
 }
