changed theme color

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -2,7 +2,7 @@
  "name": "Ikoyo Daniel",
  "short_name": "Ikoyo Daniel",
  "display": "minimal-ui",
- "background_color": "#0f2247" ,
+ "background_color": "#182031" ,
  "theme_color": "#006ede",
  "orientation": "any",
  "start_url": "/",
